testData/annotator/CPE/CPEInformationTestData.secarc
component A {

<error descr="Buffer overflow in scoop_gpio_handler_update in QEMU before 1.7.2 might allow remote attackers to execute arbitrary code via a large (1) prev_level, (2) gpio_level, or (3) gpio_dir value in a savevm image. (CWE-119, CVSS: 7.5)"><error descr="Integer overflow in the qcow_open function in block/qcow.c in QEMU before 1.7.2 allows remote attackers to cause a denial of service (crash) via a large L2 table in a QCOW version 1 image. (CWE-189, CVSS: 7.5)"><error descr="The pciej_write function in hw/acpi_piix4.c in the PIIX4 Power Management emulation in qemu-kvm does not check if a device is hotpluggable before unplugging the PCI-ISA bridge, which allows privileged guest users to cause a denial of service (guest crash) and possibly execute arbitrary code by sending a crafted value to the 0xae08 (PCI_EJ_BASE) I/O port, which leads to a use-after-free related to \"active qemu timers.\" (CWE-20, CVSS: 7.4)">cpe "cpe:2.3:a:qemu:qemu:1.0:*:*:*:*:*:*:*";</error></error></error>
}